Fixed z-index issue

--- a/src/modal/modal.component.scss
+++ b/src/modal/modal.component.scss
@@ -1,4 +1,5 @@
 .modal {
+	z-index: 1001;
   position: absolute;
   min-height: 153px;
   top: 50%;
@@ -6,19 +7,19 @@
   background-color: white;
   box-shadow: 0px 0px 10px hsla(0, 0%, 0%, 0.15);
   &.size-xl {
-    width: 980px; 
+    width: 980px;
   }
   &.size-sm {
-    width: 320px; 
+    width: 320px;
   }
   &.size-md {
-    width: 640px; 
+    width: 640px;
   }
   &.size-lg {
-    width: 900px; 
+    width: 900px;
   }
   &.size-xxl {
-    width: calc(100% - 60px); 
+    width: calc(100% - 60px);
     height: calc(100% - 60px);
   }
 }
