--- a/src/modal/overlay.component.scss
+++ b/src/modal/overlay.component.scss
@@ -5,4 +5,5 @@
   background-color:rgba(50, 50, 50, .5);
   height: 100%;
   width: 100%;
+  z-index: 1000;
 }
